# techfren-discord-bot

./: .env.example  .env.sample  .flake8  .gitignore  .pylintrc  AGENTS.md  AIOSQLITE_MIGRATION_PLAN.md  AI_CATEGORIES.md  AUTOMATED_TESTING_SUMMARY.md  BOT_STARTUP_OPTIMIZATION.md  CHANGES.md  CHANGES_SUMMARY.md  DATABASE_PERFORMANCE_IMPROVEMENTS.md  DEBUG_CLI_README.md  DUPLICATE_INVESTIGATION.md  FINAL_FIX_SUMMARY.md  FINAL_MIGRATION_STEPS.md  FIXES_AND_IMPROVEMENTS.md  IBM_PLEX_MONO_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LINTING_REPORT.md  MESSAGE_LENGTH_FIX.md  RACE_CONDITION_FIX_FINAL.md  README.md  REDUNDANT_CODE_ANALYSIS.md  ROUTING_FIX_SUMMARY.md  SESSION_SUMMARY_2025_10_24.md  SHUTDOWN_COMMAND.md  SORTING_INTEGRATION_EXAMPLE.md  THREAD_MEMORY_COMPLETE.md  THREAD_MEMORY_GUIDE.md  agent_handler.py  anti_promo_bot.py  apify_handler.py  auto_fix_pylint.py  auto_thread.py  bot.py  chart_renderer.py  code_issues.md  (+110 more)
.claude/: settings.local.json
docs/: AIOSQLITE_MIGRATION_COMPLETE.md  AIOSQLITE_MIGRATION_STATUS.md  ATTACHMENT_THREAD_FIX.md  CHANNEL_NAME_MENTIONS_FIX.md  CHART_DATA_FIX.md  CHART_GENERATION_FIX.md  CHART_IMPROVEMENTS.md  CUSTOM_CHART_THEME.md  DEPLOYMENT_CHECKLIST.md  DUAL_SYSTEM_GUIDE.md  DUPLICATE_PROCESSING_DEBUG.md  DUPLICATE_PROCESSING_FIX.md  DUPLICATE_PROCESSING_MESSAGE_FIX.md  DUPLICATE_RESPONSE_FIX.md  DUPLICATE_THREADS_DEBUG.md  DUPLICATE_THREAD_FIX.md  DUPLICATE_THREAD_FIX_FINAL.md  DUPLICATE_THREAD_FIX_V2.md  DUPLICATE_THREAD_FIX_V3.md  EXPANDED_CHART_TYPES.md  FLAKE8_CLEANUP_SUMMARY.md  IMAGE_PROCESSING.md  README.md  (+12 more)
(+37 files in other folders)
